@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -74,6 +74,8 @@
     <Compile Include="Expressions\FunctionExpression.cs" />
     <Compile Include="Expressions\MultipleSetExpression.cs" />
     <Compile Include="ExpressionUtilities.cs" />
+    <Compile Include="Hosting\Host.cs" />
+    <Compile Include="Hosting\IHost.cs" />
     <Compile Include="IBindingEnvironment.cs" />
     <Compile Include="Language\AgentClass.cs" />
     <Compile Include="Language\AgentObject.cs" />
